# Snake-game

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  README.md  Resource.rc  apple.cpp  apple.h  apple.hpp  cell.cpp  cell.h  cell.hpp  checkered.frag  collisionManager.cpp  collisionManager.h  collisionManager.hpp  configuration.cpp  configuration.h  configuration.hpp  constants.h  flash.hpp  floatingText.cpp  floatingText.hpp  game.cpp  game.h  game.hpp  gradient.frag  main.cpp  menu.cpp  menu.h  menu.hpp  obstacle.cpp  obstacle.h  obstacle.hpp  particleManager.cpp  particleManager.hpp  (+16 more)
assets/fonts/: tiny5_regular.hpp
assets/icons/: game_icon.hpp
assets/sounds/: sound_eat.hpp  sound_gameover.hpp  sound_move.hpp
assets/textures/: appleTexture.hpp
include/: apple.hpp  cell.hpp  collisionManager.hpp  configuration.hpp  difficultyManager.hpp  direction.hpp  flash.hpp  floatingText.hpp  game.hpp  menu.hpp  obstacle.hpp  particleManager.hpp  randomGenerator.hpp  saveManager.hpp  serializable.hpp  snake.hpp  soundManager.hpp  state.hpp  viewUtils.hpp
src/: Resources.aps  Resources.rc  apple.cpp  collisionManager.cpp  difficultyManager.cpp  flash.cpp  floatingText.cpp  game.cpp  main.cpp  menu.cpp  obstacle.cpp  particleManager.cpp  pathUtils.cpp  renderResources.cpp  serializable.cpp  snake.cpp  soundManager.cpp
